# eio

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .ocamlformat  CHANGES.md  CODE_OF_CONDUCT.md  Dockerfile  HACKING.md  LICENSE.md  Makefile  README.md  bench.Dockerfile  ctf.opam  dune  dune-project  edispatch.opam  eio.opam  eio.opam.template  eio_browser.opam  eio_brr.opam  eio_gcd.opam  eio_js_backend.opam  eio_linux.opam  eio_linux.opam.template  eio_luv.opam  eio_main.opam  eio_main.opam.template  eio_posix.opam  eio_posix.opam.template  eio_windows.opam  eio_windows.opam.template  eunix.ml  eunix.mli  eunix.opam  fibreslib.opam  index.html  js_of_ocaml-eio.opam  promise.opam  zzz.ml
bench/: bench.ml  bench_buf_read.ml  bench_cancel.ml  bench_condition.ml  bench_copy.ml  bench_fd.ml  bench_fstat.ml  bench_http.ml  bench_mutex.ml  bench_promise.ml  bench_select.ml  bench_select_sync.ml  bench_semaphore.ml  bench_stat.ml  bench_stream.ml  bench_systhread.ml  bench_yield.ml  dune  fibre_stream.ml  main.ml  metric.ml
doc/: domainslib.md  dune  eio_null.md  kcas.md  multicore.md  odoc-config-eio.sexp  odoc-config.sexp  prelude.ml  rationale.md
doc/traces/: Makefile  both-posix.fxt  cancel-posix.fxt  multicore-posix.fxt  net-posix.fxt  switch-mock.fxt
eio/: index.html
eio_linux/: index.html
eio_luv/: index.html
eio_main/: index.html
eio_posix/: index.html
fibreslib/: dune  (+10 more)
lib_eio/: buf_read.ml  buf_read.mli  buf_write.ml  buf_write.mli  cancel.ml  condition.ml  condition.mli  ctf.mli  dir.ml  dir.mli  domain_manager.ml  domain_manager.mli  dune  effect.compat.ml  effect.new.ml  eio.ml  eio.mli  eio_mutex.ml  eio_mutex.mli  executor_pool.ml  executor_pool.mli  fiber.ml  fibre.ml  file.ml  file.mli  flow.ml  flow.mli  fs.ml  generic.ml  generic.mli  hook.ml  lazy.ml  lazy.mli  mbox.ml  mbox.mli  multiple_exn.ml  net.ml  net.mli  path.ml  path.mli  (+28 more)
lib_eio/clock/: clock.ml  clock_stubs.c  discover.ml  dune  eio_clock.ml  eio_clock.mli
lib_eio/core/: broadcast.ml  broadcast.mli  cancel.ml  cells.ml  cells.mli  ctf.ml  ctf.mli  debug.ml  dla.ml  dune  effect.compat.ml  eio__core.ml  eio__core.mli  exn.ml  fiber.ml  hook.ml  promise.ml  single_waiter.ml  single_waiter.mli  suspend.ml  switch.ml  trace.ml  trace.mli  tracing.ctf.ml  tracing.mli  tracing.re.ml  tracing_common.ml  waiters.ml  waiters.mli
lib_eio/include/: discover.ml
lib_eio/mock/: action.ml  backend.ml  backend.mli  clock.ml  clock.mli  domain_manager.ml  domain_manager.mli  dune  eio_mock.ml  eio_mock.mli  flow.ml  handler.ml  net.ml  sockopt.ml  sockopt.mli
lib_eio/runtime_events/: dune  eio_runtime_events.ml  eio_runtime_events.mli
lib_eio/tests/: broadcast.md  ctf.md  dune  semaphore.md  sync.md  trace.md
lib_eio/tests/dscheck/: atomic.ml  dune  eio_mutex.ml  fake_sched.ml  fake_sched.mli  simple_cqs.ml  test_cells.ml  test_condition.ml  test_pool.ml  test_rcfd.ml  test_semaphore.ml  test_sync.ml  unix.ml
lib_eio/unix/: cap.c  cap.ml  cap.mli  clock_stubs.c  config.ml.windows  ctf_unix.ml  ctf_unix.mli  discover.ml  dune  eio_unix.ml  eio_unix.mli  eio_unix_stubs.c  err.ml  fd.ml  fd.mli  fork_action.c  fork_action.ml  fork_action.mli  inherit_fds.ml  inherit_fds.mli  net.ml  net.mli  pi.ml  pi.mli  primitives.h  private.ml  process.ml  process.mli  pty.c  pty.ml  pty.mli  rcfd.ml  rcfd.mli  resource.ml  sockopt.c  stubs.c  thread_pool.c  thread_pool.ml  thread_pool.mli  timed_semaphore.ml  (+1 more)
lib_eio/unix/fork/: dune
lib_eio/unix/include/: discover.ml  eio_unix_stubs.h  fork_action.h
lib_eio/utils/: dla.ml  dla.mli  dune  eio_utils.ml  lf_queue.ml  lf_queue.mli  suspended.ml  trace.ml  trace.mli  zzz.ml  zzz.mli
lib_eio_js/browser/example/: dune  index.html  index.ml  index2.html  index2.ml
lib_eio_js/browser/test/: dune  eio_test.ml  index.ml  test.ml
lib_eio_linux/: dune  eio_linux.ml  eio_linux.mli  eio_spawn_stubs.c  eio_stubs.c  err.ml  fd.ml  fixed.ml  flow.ml  flow.mli  fs.ml  getaddrinfo_stubs.c  log.ml  low_level.ml  low_level.mli  net.ml  net.mli  primitives.h  process.ml  region.ml  region.mli  sched.ml  time.ml
lib_eio_linux/include/: discover.ml
lib_eio_linux/tests/: basic_eio_linux.ml  bench_noop.ml  dune  eurcp.ml  eurcp_lib.ml  fd_passing.md  fd_sharing.md  network.md  process.md  spawn.md  test.ml
lib_eio_posix/: children.ml  children.mli  domain_mgr.ml  dune  eio_posix.ml  eio_posix.mli  eio_posix_stubs.c  err.ml  fd.ml  fd.mli  flow.ml  fs.ml  low_level.ml  low_level.mli  net.ml  path.ml  path.mli  primitives.h  process.ml  process.mli  sched.ml  sched.mli  time.ml
lib_eio_posix/include/: discover.ml  dune
lib_eio_posix/test/: dune  open_beneath.ml  path.md  poll.md  spawn.md  test_await.ml  test_devices.ml
lib_eio_windows/: children.ml  domain_mgr.ml  dune  eio_posix_stubs.c  eio_windows.ml  eio_windows.mli  eio_windows_cstruct_stubs.c  eio_windows_stubs.c  err.ml  fd.ml  fd.mli  flow.ml  fs.ml  low_level.ml  low_level.mli  net.ml  sched.ml  sched.mli  time.ml  unix_cstruct.ml
lib_eio_windows/include/: discover.ml  dune
lib_eio_windows/test/: dune  test.ml  test_fs.ml  test_net.ml
lib_main/: dune  eio_main.apple.ml  eio_main.default.ml  eio_main.linux.ml  eio_main.ml  eio_main.mli  linux_backend.disabled.ml  linux_backend.enabled.ml  luv_backend.disabled.ml  luv_backend.enabled.ml  main.linux.ml  main.macos.ml  main.mli  posix_backend.disabled.ml  posix_backend.enabled.ml  windows_backend.disabled.ml  windows_backend.enabled.ml
lib_main/tests/: dune  eio_stat.ml
tests/: basic_edispatch.ml  basic_eunix.ml  buf_reader.md  buf_write.md  condition.md  debug.md  domains.md  dune  eurcp_lib.ml  executor_pool.md  exn.md  fd_passing.md  fiber.md  flow.md  fs.md  lazy.md  lf_queue.md  mbox.md  mocks.md  mutex.md  network.md  pool.md  process.md  pty.md  random.md  semaphore.md  signal.md  signals.md  stream.md  switch.md  sync.md  task_pool.md  test.ml  test_condition.md  test_domains.md  test_edispatch.ml  test_fibre.md  test_flow.md  test_fs.md  test_lf_queue.md  (+12 more)
tests/nounix/: dune  nounix.ml
tests/racers/: dune  race_mbox.ml
(+342 files in other folders)
