(library
 (name eio_windows)
 (public_name eio_windows)
 (library_flags :standard -ccopt -lbcrypt)
 (enabled_if (= %{os_type} "Win32"))
 (foreign_stubs
  (language c)
  (include_dirs ../lib_eio/unix/include)
  (names eio_windows_stubs eio_windows_cstruct_stubs))
 (libraries eio eio.unix eio.utils fmt))

(rule
 (targets config.ml)
 (enabled_if (= %{os_type} "Win32"))
 (action (run ./include/discover.exe)))
