(library
  (name eio_main)
  (public_name eio_main)
  (libraries
    (select linux_backend.ml from
            (eio_linux -> linux_backend.enabled.ml)
            (          -> linux_backend.disabled.ml))
    (select posix_backend.ml from
            (eio_posix -> posix_backend.enabled.ml)
            (          -> posix_backend.disabled.ml))
    (select windows_backend.ml from
            (eio_windows -> windows_backend.enabled.ml)
            (            -> windows_backend.disabled.ml))
    ))
