(library
  (name eurcp_lib)
  (modules eurcp_lib)
  (libraries eunix uring))

(executable
 (name eurcp)
 (modules eurcp)
 (libraries cmdliner logs.cli logs.fmt fmt.tty fmt.cli eurcp_lib))

(executable
 (name basic_eunix)
 (modules basic_eunix)
 (libraries logs.fmt fmt.tty eurcp_lib))

(library
  (name eio_expect_tests)
  (optional) ; Otherwise, dune tries to build this even when not running tests
  (package eunix)
  (modules test_switch)
  (inline_tests)
  (preprocess (pps ppx_expect))
  (libraries eunix))

(test
 (name test)
 (modules test)
 (libraries alcotest eunix uring))
