(library
 (name eio_unix)
 (public_name eio.unix)
 (modules ctf_unix eio_unix)
 (libraries eio unix threads mtime.clock.os)
 (foreign_stubs
   (language c)
   (names eio_unix_stubs)
   (flags :standard "-D_GNU_SOURCE")))

(executable
  (name discover)
  (modules discover)
  (libraries dune-configurator))

(rule
  (targets eio_config.h)
  (action (run ./discover.exe)))
