(library
 (name eio_test)
 (modules eio_test)
 (libraries eio alcotest))

(executable
 (name test)
 (modules test)
 (modes js)
 (js_of_ocaml (flags --enable=effects --setenv=ALCOTEST_COLOR=always))
 (libraries alcotest ansi eio_test eio_browser))

(rule
 (alias runtest)
 (deps index.html test.bc.js)
 (targets test.js)
 (action (copy test.bc.js test.js)))